# taller_ros2

./: README.md
docker/: Dockerfile  cerrar_docker.sh  entrar  jar2024  run
docker/volumen/: laberinto.xml  lanzar_laberinto.py
docker/volumen/clase1/: client.py  publisher.cpp  server.cpp
docker/volumen/clase2/: laberinto.launch.py
docker/volumen/clase3/: CMakeLists.txt  qos_listener.cpp  qos_talker.cpp  qos_talker.py  slam_issue.py
docker/volumen/models/laberinto/: model.config  model.sdf
docker/volumen/models/laberinto/meshes/: laberinto.dae
ejercicios/ej0/: README.md  archivo  ej0.py
ejercicios/ej0/.create_exercise/: archivod  test.py
ejercicios/ej1/: README.md
ejercicios/ej2/: README.md  transform.cpp  transform.py
ejercicios/ej2/record/: metadata.yaml
encuesta_ed1/: README.md  Taller_ROS2.csv
